--- a/main/templates/main/bars.html
+++ b/main/templates/main/bars.html
@@ -1,12 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Lista de bares</title>
-</head>
-<body>
-    {% for bar in bars %}
-    <h2>{{ bar }}<h2>
-    {% endfor %}
-</body>
-</html>
+{% extends 'main/base.html' %}
+
+{% block content %}
+<table class="table table-striped table-hover">
+    <thead class="thead-inverse">
+      <tr>
+        <th scope="col">Bar</th>
+        <th scope="col">Descrição</th>
+        <th scope="col">Nota</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for bar in object_list %}
+        <tr>
+          <td>
+            <a href="#">{{ bar.name }}</a>
+          </td>
+          <td class="align-middle">
+            <small class="text-muted d-block">{{ bar.description }}</small>
+          </td>
+          <td class="align-middle">
+            <small class="text-muted d-block">{{ bar.rate }}</small>
+          </td>
+        </tr>
+      {% endfor %}
+    </tbody>
+</table>
+
+
+{% endblock %}
