--- a/main/templates/main/drinks.html
+++ b/main/templates/main/drinks.html
@@ -1,12 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Lista de drinks</title>
-</head>
-<body>
-    {% for drink in object_list %}
-    <h2>{{ drink }}<h2>
-    {% endfor %}
-</body>
-</html>
+{% extends 'main/base.html' %}
+
+{% block content %}
+<table class="table table-striped table-hover">
+    <thead class="thead-inverse">
+      <tr>
+        <th scope="col">Drink</th>
+        <th scope="col">Descrição</th>
+        <th scope="col">Nota</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for drink in object_list %}
+        <tr>
+          <td>
+            <a href="#">{{ drink.name }}</a>
+          </td>
+          <td class="align-middle">
+            <small class="text-muted d-block">{{ drink.description }}</small>
+          </td>
+          <td class="align-middle">
+            <small class="text-muted d-block">{{ drink.rate }}</small>
+          </td>
+        </tr>
+      {% endfor %}
+    </tbody>
+</table>
+
+{% endblock %}
