--- a/main/templates/main/drinks.html
+++ b/main/templates/main/drinks.html
@@ -1,12 +1,15 @@
 {% extends 'main/base.html' %}
 
 {% block content %}
+
+<a href="{% url 'drink.new' %}">Cadastrar novo drink</a>
 <table class="table table-striped table-hover">
     <thead class="thead-inverse">
       <tr>
         <th scope="col">Drink</th>
         <th scope="col">Descrição</th>
         <th scope="col">Nota</th>
+        <th scope="col">Ações</th>
       </tr>
     </thead>
     <tbody>
@@ -20,6 +23,9 @@
           </td>
           <td class="align-middle">
             <small class="text-muted d-block">{{ drink.rate }}</small>
+          </td>
+          <td class="align-middle">
+            <small class="text-muted d-block"><a href="#">Editar</a></small>
           </td>
         </tr>
       {% endfor %}
