--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -3,6 +3,6 @@
 {% block content %}
     <ul>
     <li><a href="{% url 'drinks' %}">Drinks</a></li>
-    <li><a href="{% url 'bars' %}">Bares</a></li>
+    <li><a href="{% url 'pubs' %}">Bares</a></li>
     </ul>
 {% endblock %}
