--- a/main/templates/main/drinks.html
+++ b/main/templates/main/drinks.html
@@ -25,7 +25,7 @@
             <small class="text-muted d-block">{{ drink.rate }}</small>
           </td>
           <td class="align-middle">
-            <small class="text-muted d-block"><a href="#">Editar</a></small>
+            <small class="text-muted d-block"><a href="{% url 'drink.edit' drink.pk %}">Editar</a></small>
           </td>
         </tr>
       {% endfor %}
