--- a/main/templates/main/drinks.html
+++ b/main/templates/main/drinks.html
@@ -30,7 +30,7 @@
           
           <td class="align-middle">
             <a href="{% url 'drink.edit' drink.pk %}">Editar</a> - 
-            <a href="{% url 'drink.remove' drink.pk %}">Remover</a>
+            <a href="{% url 'drink.delete' drink.pk %}">Remover</a>
           </td>
         </tr>
       {% endfor %}
