--- a/main/templates/main/drinks.html
+++ b/main/templates/main/drinks.html
@@ -13,7 +13,7 @@
       </tr>
     </thead>
     <tbody>
-      {% for drink in object_list %}
+      {% for drink in drinks %}
         <tr>
             
           <td class="align-middle">
