--- a/main/templates/main/pubs.html
+++ b/main/templates/main/pubs.html
@@ -1,16 +1,21 @@
 {% extends 'main/base.html' %}
 
 {% block content %}
+<div class="container">
+    <a href="{% url 'pub.new' %}">Cadastrar novo bar</a>
+</div>
+<div class="container">
 <table class="table table-striped table-hover">
     <thead class="thead-inverse">
       <tr>
         <th scope="col">Bar</th>
         <th scope="col">Descrição</th>
         <th scope="col">Nota</th>
+        <th scope="col">Ações</th>
       </tr>
     </thead>
     <tbody>
-      {% for pub in object_list %}
+      {% for pub in pubs %}
         <tr>
           <td>
             <a href="#">{{ pub.name }}</a>
@@ -18,13 +23,19 @@
           <td class="align-middle">
             <small class="text-muted d-block">{{ pub.description }}</small>
           </td>
+          
           <td class="align-middle">
             <small class="text-muted d-block">{{ pub.rate }}</small>
           </td>
+          
+          <td class="align-middle">
+            <a href="{% url 'pub.edit' pub.pk %}">Editar</a>
+          </td>
+          
         </tr>
       {% endfor %}
     </tbody>
 </table>
-
+</div>
 
 {% endblock %}
