--- a/main/templates/main/pubs.html
+++ b/main/templates/main/pubs.html
@@ -30,6 +30,7 @@
           
           <td class="align-middle">
             <a href="{% url 'pub.edit' pub.pk %}">Editar</a>
+            <a href="{% url 'pub.remove' pub.pk %}">Remover</a>
           </td>
           
         </tr>
