edit and remove drinks and pubs

--- a/main/templates/main/pub_confirm_delete.html
+++ b/main/templates/main/pub_confirm_delete.html
@@ -3,7 +3,7 @@
 {% block content %}
 <form method="post">
     {% csrf_token %}
-    <p>Você realmente deseja excluir o drink "{{object}}"?</p>
+    <p>Você realmente deseja excluir o bar "{{object}}"?</p>
     <input type="submit" value="Comfirmar">
 </form>
 
