--- a/main/templates/main/drinks.html
+++ b/main/templates/main/drinks.html
@@ -1,8 +1,10 @@
 {% extends 'main/base.html' %}
 
 {% block content %}
-
+<div class="container">
 <a href="{% url 'drink.new' %}">Cadastrar novo drink</a>
+</div>
+<div class="container">
 <table class="table table-striped table-hover">
     <thead class="thead-inverse">
       <tr>
@@ -46,5 +48,6 @@
       {% endfor %}
     </tbody>
 </table>
+</div>
 
 {% endblock %}
