--- a/main/templates/main/drink_form.html
+++ b/main/templates/main/drink_form.html
@@ -1,13 +1,13 @@
-{% extends 'main/base.html' %}
+{% include 'main/base.html' %}
 
 {% block content %}
 
+<div class="container pt-3">
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
 
         <button type="submit">enviar</button>
-
     </form>
-
+</div>
 {% endblock %}
