--- a/main/templates/main/pub_form.html
+++ b/main/templates/main/pub_form.html
@@ -1,16 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Formulario</title>
-</head>
-<body>
+{% include 'main/base.html' %}
+
+{% block content %}
+
+<div class="container pt-3">
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
 
         <button type="submit">enviar</button>
-
     </form>
-</body>
-</html>
+</div>
+{% endblock %}
