--- a/main/templates/main/pubs.html
+++ b/main/templates/main/pubs.html
@@ -1,62 +1,33 @@
 {% extends 'main/base.html' %}
 
+{% load static %}
+
 {% block content %}
 <div class="container">
     <a href="{% url 'pub.new' %}">Cadastrar novo bar</a>
 </div>
 <div class="container">
-<table class="table table-striped table-hover">
-    <thead class="thead-inverse">
-      <tr>
-        <th scope="col">Bar</th>
-        <th scope="col">Descrição</th>
-        <th scope="col">Nota</th>
-        <th scope="col">Autor</th>
-        <th scope="col">Criado em</th>
-        <th scope="col">Ações</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for pub in pubs %}
-        <tr>
-            
-          <td>
-            <a href="#">{{ pub.name }}</a>
-          </td>
-          
-          <td class="align-middle">
-            <small class="text-muted d-block">
-                {{ pub.description }}
-            </small>
-          </td>
-          
-          <td class="align-middle">
-            <small class="text-muted d-block">
-                {{ pub.rate }}
-            </small>
-          </td>
-          
-         <td class="align-middle">
-            <small class="text-muted d-block">
-                  {{ pub.created_by }}
-            </small>
-          </td>
-          
-          <td class="align-middle">
-              <small class="text-muted d-block">
-                  {{ pub.created_at }}
-              </small>
-          </td>
-                    
-          <td class="align-middle">
-            <a href="{% url 'pub.edit' pub.pk %}">Editar</a>
-            <a href="{% url 'pub.delete' pub.pk %}">Remover</a>
-          </td>
-          
-        </tr>
-      {% endfor %}
-    </tbody>
-</table>
+    <div class="row">
+        {% for pub in pubs %}
+          <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 pt-4">
+            <div class="card h-100">
+              <img src="{{pub.image.thumbnail.url}}" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">{{pub.name}}</h5>
+                <p class="card-text">{{pub.description}}</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">{{pub.created_by}} - {{pub.created_at}}</small>
+                  {% if user == pub.created_by %}
+                  <div>
+                  <a href="{% url 'pub.edit' pub.pk %}">Editar</a>
+                    <a href="{% url 'pub.delete' pub.pk %}">Remover</a>
+                  </div>
+                      {% endif %}
+              </div>
+            </div>
+          </div>
+        {% endfor %}
+    </div>
 </div>
-
 {% endblock %}
