--- a/main/templates/main/drinks.html
+++ b/main/templates/main/drinks.html
@@ -1,53 +1,37 @@
 {% extends 'main/base.html' %}
 
-{% block content %}
-<div class="container">
-<a href="{% url 'drink.new' %}">Cadastrar novo drink</a>
-</div>
-<div class="container">
-<table class="table table-striped table-hover">
-    <thead class="thead-inverse">
-      <tr>
-        <th scope="col">Drink</th>
-        <th scope="col">Descrição</th>
-        <th scope="col">Nota</th>
-        <th scope="col">Autor</th>
-        <th scope="col">Criado em</th>
-        <th scope="col">Ações</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for drink in drinks %}
-        <tr>
-            
-          <td class="align-middle">
-            <a href="#">{{ drink.name }}</a>
-          </td>
-          
-          <td class="align-middle">
-            <small class="text-muted d-block">{{ drink.description }}</small>
-          </td>
-          
-          <td class="align-middle">
-            <small class="text-muted d-block">{{ drink.rate }}</small>
-          </td>
-          
-          <td class="align-middle">
-              <small class="text-muted d-block">{{ drink.created_by }}</small>
-          </td>
-          
-          <td class="align-middle">
-              <small class="text-muted d-block">{{ drink.created_at }}</small>
-          </td>
-          
-          <td class="align-middle">
-            <a href="{% url 'drink.edit' drink.pk %}">Editar</a> - 
-            <a href="{% url 'drink.delete' drink.pk %}">Remover</a>
-          </td>
-        </tr>
-      {% endfor %}
-    </tbody>
-</table>
-</div>
+{% load static %}
 
+{% block content %}
+<div class="container pt-3">
+<div class="d-grid gap-2 d-md-block">
+  <a href="{% url 'drink.new' %}"><button class="btn btn-primary" type="button">New Drink</button></a>
+  <button class="btn btn-primary" type="button">Dashboard</button>
+</div>
+</div>
+<div class="container">
+    <div class="row">
+        {% for drink in drinks %}
+          <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 pt-4">
+            <div class="card h-100">
+              <img src="{{drink.image.thumbnail.url}}" class="card-img-top" alt="...">
+              <div class="card-body">
+                <a href="{% url 'drink.detail' drink.pk %}"><h5 class="card-title">{{drink.name}}</h5></a>
+                <p class="card-text">{{drink.description}}</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">{{drink.created_by}} - {{drink.created_at}}</small>
+                </a>
+                  {% if user == drink.created_by %}
+                  <div>
+                  <a href="{% url 'drink.edit' drink.pk %}">Editar</a>
+                    <a href="{% url 'drink.delete' drink.pk %}">Remover</a>
+                  </div>
+                  {% endif %}
+              </div>
+            </div>
+          </div>
+        {% endfor %}
+    </div>
+</div>
 {% endblock %}
