--- a/main/templates/main/pubs.html
+++ b/main/templates/main/pubs.html
@@ -14,7 +14,7 @@
         {% for pub in pubs %}
           <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 pt-4">
             <div class="card h-100">
-              <img src="{{pub.image.thumbnail.url}}" class="card-img-top" alt="...">
+              <a href="{% url 'pub.detail' pub.pk %}"><img src="{{pub.image.thumbnail.url}}" class="card-img-top" alt="..."></a>
               <div class="card-body">
                 <h5 class="card-title">{{pub.name}}</h5>
                 <p class="card-text">{{pub.description}}</p>
@@ -26,7 +26,7 @@
                   <a href="{% url 'pub.edit' pub.pk %}">Editar</a>
                     <a href="{% url 'pub.delete' pub.pk %}">Remover</a>
                   </div>
-                      {% endif %}
+                  {% endif %}
               </div>
             </div>
           </div>
