--- a/main/templates/main/pubs.html
+++ b/main/templates/main/pubs.html
@@ -32,5 +32,21 @@
           </div>
         {% endfor %}
     </div>
+    <div class="pagination">
+        <span class="step-links">
+            {% if pubs.has_previous %}
+               <a href="?page=1">&laquo; first</a>
+               <a href="?page={{ pubs.previous_page_number }}">previous</a>
+            {% endif %}
+            
+            <span class= current>
+                Page {{ pubs.number }} of {{ pubs.paginator.num_pages }}. </span>
+                
+            {% if pubs.has_next %}
+                <a href="?page={{ pubs.next_page_number }}">next</a>
+                <a href="?page={{ pubs.paginator.num_pages }}">last &raquo;</a>
+            {% endif %}
+        </span>
+    </div>
 </div>
 {% endblock %}
