--- a/main/templates/main/pubs.html
+++ b/main/templates/main/pubs.html
@@ -35,16 +35,16 @@
     <div class="pagination">
         <span class="step-links">
             {% if pubs.has_previous %}
-               <a href="?page=1">&laquo; first</a>
-               <a href="?page={{ pubs.previous_page_number }}">previous</a>
+               <a href="/pubs?page=1">&laquo; first</a>
+               <a href="/pubs?page={{ pubs.previous_page_number }}">previous</a>
             {% endif %}
             
             <span class= current>
                 Page {{ pubs.number }} of {{ pubs.paginator.num_pages }}. </span>
                 
             {% if pubs.has_next %}
-                <a href="?page={{ pubs.next_page_number }}">next</a>
-                <a href="?page={{ pubs.paginator.num_pages }}">last &raquo;</a>
+                <a href="/pubs?page={{ pubs.next_page_number }}">next</a>
+                <a href="/pubs?page={{ pubs.paginator.num_pages }}">last &raquo;</a>
             {% endif %}
         </span>
     </div>
