--- a/main/templates/main/pubs.html
+++ b/main/templates/main/pubs.html
@@ -34,17 +34,17 @@
     </div>
     <div class="pagination">
         <span class="step-links">
-            {% if pubs.has_previous %}
-               <a href="/pubs?page=1">&laquo; first</a>
-               <a href="/pubs?page={{ pubs.previous_page_number }}">previous</a>
+            {% if page_obj.has_previous %}
+               <a href="?page=1">&laquo; first</a>
+               <a href="?page={{ page_obj.previous_page_number }}">previous</a>
             {% endif %}
             
             <span class= current>
-                Page {{ pubs.number }} of {{ pubs.paginator.num_pages }}. </span>
+                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}. </span>
                 
-            {% if pubs.has_next %}
-                <a href="/pubs?page={{ pubs.next_page_number }}">next</a>
-                <a href="/pubs?page={{ pubs.paginator.num_pages }}">last &raquo;</a>
+            {% if page_obj.has_next %}
+                <a href="?page={{ page_obj.next_page_number }}">next</a>
+                <a href="/pubs?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
             {% endif %}
         </span>
     </div>
