--- a/main/templates/main/drinks.html
+++ b/main/templates/main/drinks.html
@@ -3,11 +3,13 @@
 {% load static %}
 
 {% block content %}
+{% if user.is_authenticated %}
 <div class="container pt-3">
 <div class="d-grid gap-2 d-md-block">
   <a href="{% url 'drink.new' %}"><button class="btn btn-primary" type="button">New Drink</button></a>
-  <button class="btn btn-primary" type="button">Dashboard</button>
+  <button class="btn btn-primary" type="button">Admin</button>
 </div>
+{% endif %}
 </div>
 <div class="container">
     <div class="row">
