--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,6 +1,10 @@
 {% extends 'main/base.html' %}
 
+{% load static %}
 {% block content %}
+<div class="container p-1">
+
+</div>
     <ul>
     <li><a href="{% url 'drinks' %}">Drinks</a></li>
     <li><a href="{% url 'pubs' %}">Bares</a></li>
