--- a/main/templates/main/pubs.html
+++ b/main/templates/main/pubs.html
@@ -16,7 +16,7 @@
         {% for pub in pubs %}
           <div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 pt-4">
             <div class="card h-100">
-              <a href="{% url 'pub.detail' pub.pk %}"><img src="{{pub.image.url}}" class="card-img-top" alt="..."></a>
+              <a href="{% url 'pub.detail' pub.pk %}"><img src="{{pub.image.thumbnail.url}}" class="card-img-top" alt="..."></a>
               <div class="card-body">
                 <h5 class="card-title">{{pub.name}}</h5>
                 <p class="card-text">{{pub.description}}</p>
