--- a/main/templates/main/detail_pub.html
+++ b/main/templates/main/detail_pub.html
@@ -5,10 +5,12 @@
 <div class="container">
     <h1>{{ pub.name }}</h1>
     <img src="{{pub.image.url}}">
-    <p>{{pub.description}}</p>
-    <p>{{pub.rate}}</p>
-    <p>{{pub.created_by}}</p>
-    <p>{{pub.created_at}}</p>
+    <ul>
+        <li>{{pub.description}}<li>
+        <li>{{pub.rate}}</li>
+        <li>{{pub.created_by}}</li>
+        <li>{{pub.created_at}}</p>
+    </div>
 
 </div>
 
