--- a/main/templates/main/detail_pub.html
+++ b/main/templates/main/detail_pub.html
@@ -9,7 +9,7 @@
         <li>{{pub.description}}<li>
         <li>{{pub.rate}}</li>
         <li>{{pub.created_by}}</li>
-        <li>{{pub.created_at}}</p>
+        <li>{{pub.created_at}}</li>
     </div>
 
 </div>
