--- a/main/templates/main/detail_pub.html
+++ b/main/templates/main/detail_pub.html
@@ -3,15 +3,14 @@
 {% block content %}
 
 <div class="container">
-    <h1>{{ pub.name }}</h1>
-    <img src="{{pub.image.url}}">
-    <ul>
-        <li>{{pub.description}}<li>
-        <li>{{pub.rate}}</li>
-        <li>{{pub.created_by}}</li>
-        <li>{{pub.created_at}}</li>
-    </ul>
-
+    <div class="card mb-3">
+        <img src="{{pub.image.url}}" class="card-img-top" alt="pub image">
+        <div class="card-body">
+            <h5 class="card-title">{{ pub.name }}</h5>
+            <p class="card-text">{{pub.description}}</p>
+            <p class="card-text"><small class="text-muted">{{pub.rate}} - {{pub.created_by}} - {{pub.created_at}} </small></p>
+        </div>
+    </div>
 </div>
 
 {% endblock %}
