--- a/main/templates/main/detail_drink.html
+++ b/main/templates/main/detail_drink.html
@@ -4,13 +4,13 @@
 
 <div class="container">
     <div class="card mb-3">
-    <h1>{{ drink.name }}</h1>
-    <img src="{{drink.image.url}}" width="450">
+        <h1>{{ drink.name }}</h1>
+        <img src="{{drink.image.url}}" class="card-img-top" width="450">
         <ul>
-    <li>{{drink.description}}</li>
-    <li>{{drink.rate}}</li>
-    <li>{{drink.created_by}}</li>
-    <li>{{drink.created_at}}</li>
+            <li>{{drink.description}}</li>
+            <li>{{drink.rate}}</li>
+            <li>{{drink.created_by}}</li>
+            <li>{{drink.created_at}}</li>
         </ul>
     </div>
 </div>
