--- a/main/templates/main/detail_drink.html
+++ b/main/templates/main/detail_drink.html
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="card mb-3">
         <h1>{{ drink.name }}</h1>
-        <img src="{{drink.image.url}}" class="card-img-top" width="450">
+        <img src="{{drink.image.url}}" class="card-img-top">
         <ul>
             <li>{{drink.description}}</li>
             <li>{{drink.rate}}</li>
